--- a/src/main/resources/templates/board/modify.html
+++ b/src/main/resources/templates/board/modify.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 
+<!-- 문서 안에 있는 조각을 basic 페이지에 전달한다 -->
+<th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
+
+    <th:block th:fragment="content"> <!-- 조각만들기 -->
 
 <h1 class="mt-4">Board Modify Page</h1>
 
@@ -7,28 +11,28 @@
 
   <div class="form-group">
     <label >번호</label>
-    <input type="text" class="form-control" name="" value="1" readonly>
+    <input type="text" class="form-control" name="no" th:value="${dto.no}" readonly>
   </div>
 
   <div class="form-group">
     <label >제목</label>
-    <input type="text" class="form-control" name="" value="1번">
+    <input type="text" class="form-control" name="title" th:value="${dto.title}">
   </div>
   <div class="form-group">
     <label >내용</label>
-    <textarea class="form-control" rows="5" name="">내용입니다</textarea>
+    <textarea class="form-control" rows="5" name="content">[[${dto.content}]]</textarea>
   </div>
   <div class="form-group">
     <label >작성자</label>
-    <input type="text" class="form-control" name="" value="둘리" readonly>
+    <input type="text" class="form-control" name="writer" th:value="${dto.writer}" readonly>
   </div>
   <div class="form-group">
     <label >등록일</label>
-    <input type="text" class="form-control" value="2023/02/21 10:00:00" readonly>
+    <input type="text" class="form-control" th:value="${#temporals.format(dto.regDate, 'yyyy/MM/dd HH:mm:ss')}" readonly>
   </div>
   <div class="form-group">
     <label >수정일</label>
-    <input type="text" class="form-control" value="2023/02/21 10:00:00" readonly>
+    <input type="text" class="form-control" th:value="${#temporals.format(dto.modDate, 'yyyy/MM//dd HH:mm:ss')}" readonly>
   </div>
 
 </form>
@@ -39,4 +43,44 @@
 
 <button type="button" class="btn btn-danger removeBtn">삭제</button>
 
+	<script th:inline="javascript">
 
+		//$() 함수: CSS선택자로 HTML 태그를 가져오는 함수
+		var form = $("form");
+		
+		//[확인]을 클릭하면, 서버에 게시물 수정를 요청한다.
+		//[취소]을 클릭하면 이벤트가 종료한다.
+		
+		// click() 메소드: 수정버튼을 클릭하면 특정코드를 수행하는 함수
+		$(".modifyBtn").click(function(){
+		
+			//confirm() 메소드: 수정여부를 확인하는 창을 띄우는 함수
+			if(!confirm("수정하겠습니까?")){
+				return;
+			}
+			
+			// form~attr~submit: 서버에 게시물 수정 요청
+			form.attr("action", "/board/modify").attr("method", "post").submit();
+			
+		});
+		
+		$(".listBtn").click(function(){
+		
+			
+			form.attr("action", "/board/modify").attr("method", "get").submit();
+			
+		});
+		
+		$(".removeBtn").click(function(){
+		
+			
+			form.attr("action", "/board/modify").attr("method", "post").submit();
+			
+		});
+		
+	
+	</script>
+
+  </th:block>
+
+</th:block>
